samples/_failures_safe/1761320690_dab556_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cf06731.c: In function ‘print_token’:
./samples/SAFE/__tmp_1cf06731.c:174:12: error: missing terminating " character
  174 |     printf("Line %d, Column
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1cf06731.c:174:5: error: expected expression at end of input
  174 |     printf("Line %d, Column
      |     ^~~~~~
./samples/SAFE/__tmp_1cf06731.c:174:5: error: expected declaration or statement at end of input
